Fix "mvsata:0:0:1: buffer load failed: error=27" failure.  PR/54205

Ok'ed by jdolecek@.
Should be pulled up to netbsd-8.